// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DEPRECATED_IntegrationsStatsFilter should merge stats filters on item select 1`] = `
[
  {
    "payload": {
      "campaigns": [],
      "integrations": [
        5,
      ],
    },
    "type": "stats/mergeStatsFilters",
  },
]
`;

exports[`DEPRECATED_IntegrationsStatsFilter should not render missing integrations 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      2 integrations
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search integrations..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component dropdown-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="checkbox"
      >
        <label
          class="Label--label--QAnfT label quickSelectionOption"
          for="checkbox-1"
        >
          <input
            checked=""
            class="input"
            id="checkbox-1"
            name="checkbox-1"
            type="checkbox"
          />
          Deselect all
          <div
            class="badge badge--unselect"
          >
            2
          </div>
        </label>
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    >
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-2"
        >
          <input
            checked=""
            class="input"
            id="checkbox-2"
            name="checkbox-2"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            http
          </i>
          <span
            id="label-tooltip-3"
          >
            Slack Webhook
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-4"
        >
          <input
            checked=""
            class="input"
            id="checkbox-4"
            name="checkbox-4"
            type="checkbox"
          />
          <img
            alt="logo-gmail"
            class="integrationIcon"
            src="test-file-stub"
          />
          <span
            id="label-tooltip-5"
          >
            Acme Billing
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-6"
        >
          <input
            class="input"
            id="checkbox-6"
            name="checkbox-6"
            type="checkbox"
          />
          <img
            alt="logo-gmail"
            class="integrationIcon"
            src="test-file-stub"
          />
          <span
            id="label-tooltip-7"
          >
            Deactivated gmail
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-8"
        >
          <input
            class="input"
            id="checkbox-8"
            name="checkbox-8"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            http
          </i>
          <span
            id="label-tooltip-9"
          >
            Backoffice Integration 2
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-10"
        >
          <input
            class="input"
            id="checkbox-10"
            name="checkbox-10"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            http
          </i>
          <span
            id="label-tooltip-11"
          >
            Backoffice Integration
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-12"
        >
          <input
            class="input"
            id="checkbox-12"
            name="checkbox-12"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            email
          </i>
          <span
            id="label-tooltip-13"
          >
            Acme Support
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-14"
        >
          <input
            class="input"
            id="checkbox-14"
            name="checkbox-14"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            email
          </i>
          <span
            id="label-tooltip-15"
          >
            Acme Contact
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-16"
        >
          <input
            class="input"
            id="checkbox-16"
            name="checkbox-16"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            email
          </i>
          <span
            id="label-tooltip-17"
          >
            Acme Unverified
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-18"
        >
          <input
            class="input"
            id="checkbox-18"
            name="checkbox-18"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            email
          </i>
          <span
            id="label-tooltip-19"
          >
            Sendgrid Integration
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-20"
        >
          <input
            class="input"
            id="checkbox-20"
            name="checkbox-20"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            phone
          </i>
          <span
            id="label-tooltip-21"
          >
            Acme Phone
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-22"
        >
          <input
            class="input"
            id="checkbox-22"
            name="checkbox-22"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            chat
          </i>
          <span
            id="label-tooltip-23"
          >
            Chitty chatty
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-24"
        >
          <input
            class="input"
            id="checkbox-24"
            name="checkbox-24"
            type="checkbox"
          />
          <img
            alt="logo-bigcommerce"
            class="integrationIcon"
          />
          <span
            id="label-tooltip-25"
          >
            gorgiastest.mybigcommerce.com
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-26"
        >
          <input
            class="input"
            id="checkbox-26"
            name="checkbox-26"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            edit_note
          </i>
          <span
            id="label-tooltip-27"
          >
            Contact Form (Morty)
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-28"
        >
          <input
            class="input"
            id="checkbox-28"
            name="checkbox-28"
            type="checkbox"
          />
          <i
            class="icon material-icons icon"
          >
            live_help
          </i>
          <span
            id="label-tooltip-29"
          >
            Help Center (Rick)
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`DEPRECATED_IntegrationsStatsFilter should render icon for aircall integration 1`] = `
<span
  id="label-tooltip-31"
>
  aircall integration
</span>
`;

exports[`DEPRECATED_IntegrationsStatsFilter should render icon for email integration 1`] = `
<span
  id="label-tooltip-43"
>
  email integration
</span>
`;

exports[`DEPRECATED_IntegrationsStatsFilter should render icon for facebook integration 1`] = `
<span
  id="label-tooltip-45"
>
  facebook integration
</span>
`;

exports[`DEPRECATED_IntegrationsStatsFilter should render icon for gmail integration 1`] = `
<span
  id="label-tooltip-33"
>
  gmail integration
</span>
`;

exports[`DEPRECATED_IntegrationsStatsFilter should render icon for gorgias_chat integration 1`] = `
<span
  id="label-tooltip-53"
>
  gorgias_chat integration
</span>
`;

exports[`DEPRECATED_IntegrationsStatsFilter should render icon for http integration 1`] = `
<span
  id="label-tooltip-47"
>
  http integration
</span>
`;

exports[`DEPRECATED_IntegrationsStatsFilter should render icon for outlook integration 1`] = `
<span
  id="label-tooltip-35"
>
  outlook integration
</span>
`;

exports[`DEPRECATED_IntegrationsStatsFilter should render icon for phone integration 1`] = `
<span
  id="label-tooltip-49"
>
  phone integration
</span>
`;

exports[`DEPRECATED_IntegrationsStatsFilter should render icon for shopify integration 1`] = `
<span
  id="label-tooltip-37"
>
  shopify integration
</span>
`;

exports[`DEPRECATED_IntegrationsStatsFilter should render icon for sms integration 1`] = `
<span
  id="label-tooltip-51"
>
  sms integration
</span>
`;

exports[`DEPRECATED_IntegrationsStatsFilter should render icon for whatsapp integration 1`] = `
<span
  id="label-tooltip-41"
>
  whatsapp integration
</span>
`;

exports[`DEPRECATED_IntegrationsStatsFilter should render icon for zendesk integration 1`] = `
<span
  id="label-tooltip-39"
>
  zendesk integration
</span>
`;

exports[`DEPRECATED_IntegrationsStatsFilter should replace the item when isMultiple is set to false 1`] = `
[
  {
    "payload": {
      "campaigns": [],
      "integrations": [
        5,
      ],
    },
    "type": "stats/mergeStatsFilters",
  },
]
`;
